cassandra.h

typedef enum { cass_false = 0, cass_true = 1 } cass_bool_t;
typedef __UINT8_TYPE__ cass_uint8_t;
typedef unsigned __INT8_TYPE__ cass_uint8_t;
typedef unsigned char cass_uint8_t;
typedef __INT32_TYPE__ cass_int32_t;
typedef __INT32_TYPE__ cass_int32_t;
typedef int cass_int32_t;
typedef __UINT64_TYPE__ cass_uint64_t;
typedef unsigned __INT64_TYPE__ cass_uint64_t;
typedef unsigned long long int cass_uint64_t;
typedef unsigned long long cass_uint64_t;
typedef cass_uint8_t cass_byte_t;
typedef struct CassInet_ {
  cass_uint8_t address[CASS_INET_V6_LENGTH];
  cass_uint8_t address_length;
} CassInet;
typedef struct CassUuid_ {
  cass_uint64_t time_and_version;
  cass_uint64_t clock_seq_and_node;
} CassUuid;
typedef struct CassValue_ CassValue;
typedef struct CassUuidGen_ CassUuidGen;
typedef struct CassTimestampGen_ CassTimestampGen;
typedef struct CassRetryPolicy_ CassRetryPolicy;
typedef enum CassConsistency_ {
  CASS_CONSISTENCY_UNKNOWN      = 0xFFFF,
  CASS_CONSISTENCY_ANY          = 0x0000,
  CASS_CONSISTENCY_ONE          = 0x0001,
  CASS_CONSISTENCY_TWO          = 0x0002,
  CASS_CONSISTENCY_THREE        = 0x0003,
  CASS_CONSISTENCY_QUORUM       = 0x0004,
  CASS_CONSISTENCY_ALL          = 0x0005,
  CASS_CONSISTENCY_LOCAL_QUORUM = 0x0006,
  CASS_CONSISTENCY_EACH_QUORUM  = 0x0007,
  CASS_CONSISTENCY_SERIAL       = 0x0008,
  CASS_CONSISTENCY_LOCAL_SERIAL = 0x0009,
  CASS_CONSISTENCY_LOCAL_ONE    = 0x000A
} CassConsistency;
typedef enum CassWriteType_ {
  CASS_WRITE_TYPE_UKNOWN,
  CASS_WRITE_TYPE_SIMPLE,
  CASS_WRITE_TYPE_BATCH,
  CASS_WRITE_TYPE_UNLOGGED_BATCH,
  CASS_WRITE_TYPE_COUNTER,
  CASS_WRITE_TYPE_BATCH_LOG,
  CASS_WRITE_TYPE_CAS
} CassWriteType;
typedef enum CassValueType_ {
  CASS_VALUE_TYPE_UNKNOWN   = 0xFFFF,
  CASS_VALUE_TYPE_CUSTOM    = 0x0000,
  CASS_VALUE_TYPE_ASCII     = 0x0001,
  CASS_VALUE_TYPE_BIGINT    = 0x0002,
  CASS_VALUE_TYPE_BLOB      = 0x0003,
  CASS_VALUE_TYPE_BOOLEAN   = 0x0004,
  CASS_VALUE_TYPE_COUNTER   = 0x0005,
  CASS_VALUE_TYPE_DECIMAL   = 0x0006,
  CASS_VALUE_TYPE_DOUBLE    = 0x0007,
  CASS_VALUE_TYPE_FLOAT     = 0x0008,
  CASS_VALUE_TYPE_INT       = 0x0009,
  CASS_VALUE_TYPE_TEXT      = 0x000A,
  CASS_VALUE_TYPE_TIMESTAMP = 0x000B,
  CASS_VALUE_TYPE_UUID      = 0x000C,
  CASS_VALUE_TYPE_VARCHAR   = 0x000D,
  CASS_VALUE_TYPE_VARINT    = 0x000E,
  CASS_VALUE_TYPE_TIMEUUID  = 0x000F,
  CASS_VALUE_TYPE_INET      = 0x0010,
  CASS_VALUE_TYPE_DATE      = 0x0011,
  CASS_VALUE_TYPE_TIME      = 0x0012,
  CASS_VALUE_TYPE_SMALL_INT = 0x0013,
  CASS_VALUE_TYPE_TINY_INT  = 0x0014,
  CASS_VALUE_TYPE_LIST      = 0x0020,
  CASS_VALUE_TYPE_MAP       = 0x0021,
  CASS_VALUE_TYPE_SET       = 0x0022,
  CASS_VALUE_TYPE_UDT       = 0x0030,
  CASS_VALUE_TYPE_TUPLE     = 0x0031,
  CASS_VALUE_TYPE_LAST_ENTRY
} CassValueType;
typedef enum CassLogLevel_ {
#define XX_LOG(log_level, _) log_level,
  CASS_LOG_LEVEL_MAP(XX_LOG)
#undef XX_LOG
  CASS_LOG_LAST_ENTRY
} CassLogLevel;
typedef enum CassError_ {
  CASS_OK = 0,
#define XX_ERROR(source, name, code, _) name = CASS_ERROR(source, code),
  CASS_ERROR_MAP(XX_ERROR)
#undef XX_ERROR
  CASS_ERROR_LAST_ENTRY
} CassError;
typedef struct CassLogMessage_ {
  cass_uint64_t time_ms;
  CassLogLevel severity; 
  const char* file; 
  int line; 
  const char* function; 
  char message[CASS_LOG_MAX_MESSAGE_SIZE]; 
} CassLogMessage;
typedef void (*CassLogCallback)(const CassLogMessage* message,
                                void* data);
CASS_EXPORT CassError
cass_value_get_inet(const CassValue* value,
                    CassInet* output);
CASS_EXPORT CassError
cass_value_get_string(const CassValue* value,
                      const char** output,
                      size_t* output_size);
CASS_EXPORT CassError
cass_value_get_bytes(const CassValue* value,
                     const cass_byte_t** output,
                     size_t* output_size);
CASS_EXPORT CassError
cass_value_get_decimal(const CassValue* value,
                       const cass_byte_t** varint,
                       size_t* varint_size,
                       cass_int32_t* scale);
CASS_EXPORT CassValueType
cass_value_type(const CassValue* value);
CASS_EXPORT cass_bool_t
cass_value_is_null(const CassValue* value);
CASS_EXPORT cass_bool_t
cass_value_is_collection(const CassValue* value);
CASS_EXPORT size_t
cass_value_item_count(const CassValue* collection);
CASS_EXPORT CassValueType
cass_value_primary_sub_type(const CassValue* collection);
CASS_EXPORT CassValueType
cass_value_secondary_sub_type(const CassValue* collection);
CASS_EXPORT CassUuidGen*
cass_uuid_gen_new();
CASS_EXPORT CassUuidGen*
cass_uuid_gen_new_with_node(cass_uint64_t node);
CASS_EXPORT void
cass_uuid_gen_free(CassUuidGen* uuid_gen);
CASS_EXPORT void
cass_uuid_gen_time(CassUuidGen* uuid_gen,
                   CassUuid* output);
CASS_EXPORT void
cass_uuid_gen_random(CassUuidGen* uuid_gen,
                     CassUuid* output);
CASS_EXPORT void
cass_uuid_gen_from_time(CassUuidGen* uuid_gen,
                        cass_uint64_t timestamp,
                        CassUuid* output);
CASS_EXPORT void
cass_uuid_min_from_time(cass_uint64_t time,
                        CassUuid* output);
CASS_EXPORT void
cass_uuid_max_from_time(cass_uint64_t time,
                        CassUuid* output);
CASS_EXPORT cass_uint64_t
cass_uuid_timestamp(CassUuid uuid);
CASS_EXPORT cass_uint8_t
cass_uuid_version(CassUuid uuid);
CASS_EXPORT void
cass_uuid_string(CassUuid uuid,
                 char* output);
CASS_EXPORT CassError
cass_uuid_from_string(const char* str,
                      CassUuid* output);
CASS_EXPORT CassError
cass_uuid_from_string_n(const char* str,
                        size_t str_length,
                        CassUuid* output);
CASS_EXPORT CassTimestampGen*
cass_timestamp_gen_server_side_new();
CASS_EXPORT CassTimestampGen*
cass_timestamp_gen_monotonic_new();
CASS_EXPORT void
cass_timestamp_gen_free(CassTimestampGen* timestamp_gen);
CASS_EXPORT CassRetryPolicy*
cass_retry_policy_default_new();
CASS_EXPORT CassRetryPolicy*
cass_retry_policy_downgrading_consistency_new();
CASS_EXPORT CassRetryPolicy*
cass_retry_policy_fallthrough_new();
CASS_EXPORT CassRetryPolicy*
cass_retry_policy_logging_new(CassRetryPolicy* child_retry_policy);
CASS_EXPORT void
cass_retry_policy_free(CassRetryPolicy* policy);
CASS_EXPORT const char*
cass_consistency_string(CassConsistency consistency);
CASS_EXPORT const char*
cass_write_type_string(CassWriteType write_type);
CASS_EXPORT const char*
cass_error_desc(CassError error);
CASS_EXPORT void
CASS_DEPRECATED(cass_log_cleanup());
CASS_EXPORT void
cass_log_set_level(CassLogLevel log_level);
CASS_EXPORT void
cass_log_set_callback(CassLogCallback callback,
                      void* data);
CASS_EXPORT void
CASS_DEPRECATED(cass_log_set_queue_size(size_t queue_size));
CASS_EXPORT const char*
cass_log_level_string(CassLogLevel log_level);
CASS_EXPORT CassInet
cass_inet_init_v4(const cass_uint8_t* address);
CASS_EXPORT CassInet
cass_inet_init_v6(const cass_uint8_t* address);
CASS_EXPORT void
cass_inet_string(CassInet inet,
                 char* output);
CASS_EXPORT CassError
cass_inet_from_string(const char* str,
                      CassInet* output);
CASS_EXPORT CassError
cass_inet_from_string_n(const char* str,
                        size_t str_length,
                        CassInet* output);