src/cassandra.rs

    pub fn cass_value_get_inet(value: *const CassValue, output: *mut CassInet)
     -> CassError;
    pub fn cass_value_get_string(value: *const CassValue,
                                 output: *mut *const ::libc::c_char,
                                 output_size: *mut size_t) -> CassError;
    pub fn cass_value_get_bytes(value: *const CassValue,
                                output: *mut *const cass_byte_t,
                                output_size: *mut size_t) -> CassError;
    pub fn cass_value_get_decimal(value: *const CassValue,
                                  varint: *mut *const cass_byte_t,
                                  varint_size: *mut size_t,
                                  scale: *mut cass_int32_t) -> CassError;
    pub fn cass_value_type(value: *const CassValue) -> CassValueType;
    pub fn cass_value_is_null(value: *const CassValue) -> cass_bool_t;
    pub fn cass_value_is_collection(value: *const CassValue) -> cass_bool_t;
    pub fn cass_value_item_count(collection: *const CassValue) -> size_t;
    pub fn cass_value_primary_sub_type(collection: *const CassValue)
     -> CassValueType;
    pub fn cass_value_secondary_sub_type(collection: *const CassValue)
     -> CassValueType;
    pub fn cass_uuid_gen_new() -> *mut CassUuidGen;
    pub fn cass_uuid_gen_new_with_node(node: cass_uint64_t)
     -> *mut CassUuidGen;
    pub fn cass_uuid_gen_free(uuid_gen: *mut CassUuidGen) -> ();
    pub fn cass_uuid_gen_time(uuid_gen: *mut CassUuidGen,
                              output: *mut CassUuid) -> ();
    pub fn cass_uuid_gen_random(uuid_gen: *mut CassUuidGen,
                                output: *mut CassUuid) -> ();
    pub fn cass_uuid_gen_from_time(uuid_gen: *mut CassUuidGen,
                                   timestamp: cass_uint64_t,
                                   output: *mut CassUuid) -> ();
    pub fn cass_uuid_min_from_time(time: cass_uint64_t, output: *mut CassUuid)
     -> ();
    pub fn cass_uuid_max_from_time(time: cass_uint64_t, output: *mut CassUuid)
     -> ();
    pub fn cass_uuid_timestamp(uuid: CassUuid) -> cass_uint64_t;
    pub fn cass_uuid_version(uuid: CassUuid) -> cass_uint8_t;
    pub fn cass_uuid_string(uuid: CassUuid, output: *mut ::libc::c_char)
     -> ();
    pub fn cass_uuid_from_string(str: *const ::libc::c_char,
                                 output: *mut CassUuid) -> CassError;
    pub fn cass_uuid_from_string_n(str: *const ::libc::c_char,
                                   str_length: size_t, output: *mut CassUuid)
     -> CassError;
    pub fn cass_timestamp_gen_server_side_new() -> *mut CassTimestampGen;
    pub fn cass_timestamp_gen_monotonic_new() -> *mut CassTimestampGen;
    pub fn cass_timestamp_gen_free(timestamp_gen: *mut CassTimestampGen)
     -> ();
    pub fn cass_retry_policy_default_new() -> *mut CassRetryPolicy;
    pub fn cass_retry_policy_downgrading_consistency_new()
     -> *mut CassRetryPolicy;
    pub fn cass_retry_policy_fallthrough_new() -> *mut CassRetryPolicy;
    pub fn cass_retry_policy_logging_new(child_retry_policy:
                                             *mut CassRetryPolicy)
     -> *mut CassRetryPolicy;
    pub fn cass_retry_policy_free(policy: *mut CassRetryPolicy) -> ();
    pub fn cass_consistency_string(consistency: CassConsistency)
     -> *const ::libc::c_char;
    pub fn cass_write_type_string(write_type: CassWriteType)
     -> *const ::libc::c_char;
    pub fn cass_error_desc(error: CassError) -> *const ::libc::c_char;
    pub fn cass_log_cleanup() -> ();
    pub fn cass_log_set_level(log_level: CassLogLevel) -> ();
    pub fn cass_log_set_callback(callback: CassLogCallback,
                                 data: *mut ::libc::c_void) -> ();
    pub fn cass_log_set_queue_size(queue_size: size_t) -> ();
    pub fn cass_log_level_string(log_level: CassLogLevel)
     -> *const ::libc::c_char;
    pub fn cass_inet_init_v4(address: *const cass_uint8_t) -> CassInet;
    pub fn cass_inet_init_v6(address: *const cass_uint8_t) -> CassInet;
    pub fn cass_inet_string(inet: CassInet, output: *mut ::libc::c_char)
     -> ();
    pub fn cass_inet_from_string(str: *const ::libc::c_char,
                                 output: *mut CassInet) -> CassError;
    pub fn cass_inet_from_string_n(str: *const ::libc::c_char,
                                   str_length: size_t, output: *mut CassInet)
     -> CassError;
}
